# sccp

./: .gitlab-ci.yml  COPYING  ChangeLog  Makefile.am  NEWS  README  README.build  README.maintainer  README.md  configure.ac  sccp.rel.in  sys.config.in
doc/: Makefile.am  diagrams.graffle  overview.edoc-in  supervision.edoc
ebin/: Makefile.am  sccp.app-in  sccp.appup.in
include/: Makefile.am  sccp.hrl  sccp_primitive.hrl
src/: sccp.erl  sccp_app.erl  sccp_codec.erl  sccp_sup.erl
test/: Makefile.am  sccp_api_SUITE.erl  sccp_codec_SUITE.erl  test.spec
